# Django-CBV-Tracker

./: .gitignore  README.md  pyproject.toml
src/cbv_tracker/: __init__.py  django_cbv_tracker.py  main.py
