[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "cbv_tracker"
version = "0.0.5"
authors = [
  { name="Rafal Zebrowski", email="zebraf.dev@gmail.com" },
]
description = "Django Class Based View basic tracker"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zebra-f/Django-CBV-Tracker"
"Bug Tracker" = "https://github.com/zebra-f/Django-CBV-Tracker/issues"